# jitterbugs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  go.mod  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-desktop.yml  qaqc.yml
cmd/qaqc/: auditgithub.go  main.go
docs/: DATA_FLOWS.md  EVIDENCE_PACKAGE.md  MOBILE_INTEGRATION.md  NOTES.md  OCEAN_PROTOCOL.md  OSINT_INCIDENT_RESPONSE.md  SAFETY-SCOPE-POLICY.md  SECURITY_ARCHITECTURE.md  THREAT_MODEL.md  VPN_INTEGRATION.md  build.md  qaqc.md
internal/checks/: cidetect.go  cidetect_test.go  conflictmarkers.go  conflictmarkers_test.go  pullrequests.go  pullrequests_test.go  requiredfiles.go  requiredfiles_test.go  secrets.go  secrets_test.go
internal/core/: models.go  runner.go  runner_test.go
internal/github/: client.go  client_test.go
internal/remote/: clone.go  clone_test.go
internal/report/: html.go  json.go  multireport.go
jitterbugs/: __init__.py  analyzer.py  detector.py
jitterbugs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging/deb/: build-deb.sh
scripts/: run_sniffer.py
src/jitterbugs/: __init__.py  app.py
tests/: __init__.py  test_analyzer.py  test_app.py  test_detector.py
