[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jitterbugs"
version = "0.1.0"
description = "meant to sniff out assholes better than before"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jitterbugs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
