[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jitterbugs"
version = "0.1.0"
description = "Consent-based real-time audio/video feature extraction and overlay demo."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "backbiten" }]
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "mediapipe>=0.10",
  "librosa>=0.10",
  "pyaudio>=0.2.14",
] 

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
